versions/0.8.1/_sources/refs/_aws-cdk_aws-waf.rst.txt
.. @jsii-pacmak:meta@ {"fingerprint":"Ec6ENqPNU28UBEE3eGHKZkQRtuHKoxRAl6d9Keie39Q="}

@aws-cdk/aws-waf
================

.. tabs::

   .. group-tab:: Java

      View in `Maven Central <https://repo1.maven.org/maven2/software/amazon/awscdk/waf/0.8.1/>`_

      **Apache Buildr**:

      .. code-block:: none

         'software.amazon.awscdk:waf:jar:0.8.1'

      **Apache Ivy**:

      .. code-block:: xml

         <dependency groupId="software.amazon.awscdk" name="waf" rev="0.8.1"/>

      **Apache Maven**:

      .. code-block:: xml

         <dependency>
           <groupId>software.amazon.awscdk</groupId>
           <artifactId>waf</artifactId>
           <version>0.8.1</version>
         </dependency>

      **Gradle / Grails**:

      .. code-block:: none

         compile 'software.amazon.awscdk:waf:0.8.1'

      **Groovy Grape**:

      .. code-block:: none

         @Grapes(
         @Grab(group='software.amazon.awscdk', module='waf', version='0.8.1')
         )


   .. group-tab:: JavaScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-waf/v/0.8.1>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-waf@0.8.1

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-waf": "^0.8.1"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-waf@0.8.1


   .. group-tab:: TypeScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-waf/v/0.8.1>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-waf@0.8.1

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-waf": "^0.8.1"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-waf@0.8.1



.. mdinclude:: ./__aws-cdk_aws-waf.README.md

Reference
---------

.. py:module:: @aws-cdk/aws-waf


cloudformation
^^^^^^^^^^^^^^
.. py:module:: @aws-cdk/aws-waf.cloudformation

ByteMatchSetResource
~~~~~~~~~~~~~~~~~~~~

.. py:class:: ByteMatchSetResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.waf.cloudformation.ByteMatchSetResource;

      .. code-tab:: javascript

         const { cloudformation.ByteMatchSetResource } = require('@aws-cdk/aws-waf');

      .. code-tab:: typescript

         import { cloudformation.ByteMatchSetResource } from '@aws-cdk/aws-waf';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``ByteMatchSetResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``ByteMatchSetResource``
   :type properties: :py:class:`~@aws-cdk/aws-waf.cloudformation.ByteMatchSetResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*

   .. py:class:: ByteMatchTupleProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.waf.cloudformation.ByteMatchSetResource.ByteMatchTupleProperty;

         .. code-tab:: javascript

            // cloudformation.ByteMatchSetResource.ByteMatchTupleProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ByteMatchSetResource.ByteMatchTupleProperty } from '@aws-cdk/aws-waf';





      .. py:attribute:: fieldToMatch

         ``ByteMatchSetResource.ByteMatchTupleProperty.FieldToMatch``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-waf-bytematchset-bytematchtuples.html#cfn-waf-bytematchset-bytematchtuples-fieldtomatch


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-waf.cloudformation.ByteMatchSetResource.FieldToMatchProperty`


      .. py:attribute:: positionalConstraint

         ``ByteMatchSetResource.ByteMatchTupleProperty.PositionalConstraint``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-waf-bytematchset-bytematchtuples.html#cfn-waf-bytematchset-bytematchtuples-positionalconstraint


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: targetString

         ``ByteMatchSetResource.ByteMatchTupleProperty.TargetString``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-waf-bytematchset-bytematchtuples.html#cfn-waf-bytematchset-bytematchtuples-targetstring


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: targetStringBase64

         ``ByteMatchSetResource.ByteMatchTupleProperty.TargetStringBase64``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-waf-bytematchset-bytematchtuples.html#cfn-waf-bytematchset-bytematchtuples-targetstringbase64


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: textTransformation

         ``ByteMatchSetResource.ByteMatchTupleProperty.TextTransformation``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-waf-bytematchset-bytematchtuples.html#cfn-waf-bytematchset-bytematchtuples-texttransformation


         :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: FieldToMatchProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.waf.cloudformation.ByteMatchSetResource.FieldToMatchProperty;

         .. code-tab:: javascript

            // cloudformation.ByteMatchSetResource.FieldToMatchProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ByteMatchSetResource.FieldToMatchProperty } from '@aws-cdk/aws-waf';





      .. py:attribute:: data

         ``ByteMatchSetResource.FieldToMatchProperty.Data``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-waf-bytematchset-bytematchtuples-fieldtomatch.html#cfn-waf-bytematchset-bytematchtuples-fieldtomatch-data


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: type

         ``ByteMatchSetResource.FieldToMatchProperty.Type``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-waf-bytematchset-bytematchtuples-fieldtomatch.html#cfn-waf-bytematchset-bytematchtuples-fieldtomatch-type


         :type: string or :py:class:`@aws-cdk/cdk.Token`



ByteMatchSetResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ByteMatchSetResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.waf.cloudformation.ByteMatchSetResourceProps;

      .. code-tab:: javascript

         // cloudformation.ByteMatchSetResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.ByteMatchSetResourceProps } from '@aws-cdk/aws-waf';





   .. py:attribute:: byteMatchSetName

      ``AWS::WAF::ByteMatchSet.Name``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-waf-bytematchset.html#cfn-waf-bytematchset-name


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: byteMatchTuples

      ``AWS::WAF::ByteMatchSet.ByteMatchTuples``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-waf-bytematchset.html#cfn-waf-bytematchset-bytematchtuples


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-waf.cloudformation.ByteMatchSetResource.ByteMatchTupleProperty` or undefined


IPSetResource
~~~~~~~~~~~~~

.. py:class:: IPSetResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.waf.cloudformation.IPSetResource;

      .. code-tab:: javascript

         const { cloudformation.IPSetResource } = require('@aws-cdk/aws-waf');

      .. code-tab:: typescript

         import { cloudformation.IPSetResource } from '@aws-cdk/aws-waf';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``IPSetResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``IPSetResource``
   :type properties: :py:class:`~@aws-cdk/aws-waf.cloudformation.IPSetResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*

   .. py:class:: IPSetDescriptorProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.waf.cloudformation.IPSetResource.IPSetDescriptorProperty;

         .. code-tab:: javascript

            // cloudformation.IPSetResource.IPSetDescriptorProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.IPSetResource.IPSetDescriptorProperty } from '@aws-cdk/aws-waf';





      .. py:attribute:: type

         ``IPSetResource.IPSetDescriptorProperty.Type``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-waf-ipset-ipsetdescriptors.html#cfn-waf-ipset-ipsetdescriptors-type


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: value

         ``IPSetResource.IPSetDescriptorProperty.Value``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-waf-ipset-ipsetdescriptors.html#cfn-waf-ipset-ipsetdescriptors-value


         :type: string or :py:class:`@aws-cdk/cdk.Token`



IPSetResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: IPSetResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.waf.cloudformation.IPSetResourceProps;

      .. code-tab:: javascript

         // cloudformation.IPSetResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.IPSetResourceProps } from '@aws-cdk/aws-waf';





   .. py:attribute:: ipSetName

      ``AWS::WAF::IPSet.Name``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-waf-ipset.html#cfn-waf-ipset-name


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: ipSetDescriptors

      ``AWS::WAF::IPSet.IPSetDescriptors``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-waf-ipset.html#cfn-waf-ipset-ipsetdescriptors


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-waf.cloudformation.IPSetResource.IPSetDescriptorProperty` or undefined


RuleResource
~~~~~~~~~~~~

.. py:class:: RuleResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.waf.cloudformation.RuleResource;

      .. code-tab:: javascript

         const { cloudformation.RuleResource } = require('@aws-cdk/aws-waf');

      .. code-tab:: typescript

         import { cloudformation.RuleResource } from '@aws-cdk/aws-waf';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``RuleResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``RuleResource``
   :type properties: :py:class:`~@aws-cdk/aws-waf.cloudformation.RuleResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*

   .. py:class:: PredicateProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.waf.cloudformation.RuleResource.PredicateProperty;

         .. code-tab:: javascript

            // cloudformation.RuleResource.PredicateProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.RuleResource.PredicateProperty } from '@aws-cdk/aws-waf';





      .. py:attribute:: dataId

         ``RuleResource.PredicateProperty.DataId``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-waf-rule-predicates.html#cfn-waf-rule-predicates-dataid


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: negated

         ``RuleResource.PredicateProperty.Negated``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-waf-rule-predicates.html#cfn-waf-rule-predicates-negated


         :type: boolean or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: type

         ``RuleResource.PredicateProperty.Type``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-waf-rule-predicates.html#cfn-waf-rule-predicates-type


         :type: string or :py:class:`@aws-cdk/cdk.Token`



RuleResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: RuleResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.waf.cloudformation.RuleResourceProps;

      .. code-tab:: javascript

         // cloudformation.RuleResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.RuleResourceProps } from '@aws-cdk/aws-waf';





   .. py:attribute:: metricName

      ``AWS::WAF::Rule.MetricName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-waf-rule.html#cfn-waf-rule-metricname


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: ruleName

      ``AWS::WAF::Rule.Name``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-waf-rule.html#cfn-waf-rule-name


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: predicates

      ``AWS::WAF::Rule.Predicates``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-waf-rule.html#cfn-waf-rule-predicates


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-waf.cloudformation.RuleResource.PredicateProperty` or undefined


SizeConstraintSetResource
~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: SizeConstraintSetResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.waf.cloudformation.SizeConstraintSetResource;

      .. code-tab:: javascript

         const { cloudformation.SizeConstraintSetResource } = require('@aws-cdk/aws-waf');

      .. code-tab:: typescript

         import { cloudformation.SizeConstraintSetResource } from '@aws-cdk/aws-waf';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``SizeConstraintSetResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``SizeConstraintSetResource``
   :type properties: :py:class:`~@aws-cdk/aws-waf.cloudformation.SizeConstraintSetResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*

   .. py:class:: FieldToMatchProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.waf.cloudformation.SizeConstraintSetResource.FieldToMatchProperty;

         .. code-tab:: javascript

            // cloudformation.SizeConstraintSetResource.FieldToMatchProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.SizeConstraintSetResource.FieldToMatchProperty } from '@aws-cdk/aws-waf';





      .. py:attribute:: data

         ``SizeConstraintSetResource.FieldToMatchProperty.Data``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-waf-sizeconstraintset-sizeconstraint-fieldtomatch.html#cfn-waf-sizeconstraintset-sizeconstraint-fieldtomatch-data


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: type

         ``SizeConstraintSetResource.FieldToMatchProperty.Type``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-waf-sizeconstraintset-sizeconstraint-fieldtomatch.html#cfn-waf-sizeconstraintset-sizeconstraint-fieldtomatch-type


         :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: SizeConstraintProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.waf.cloudformation.SizeConstraintSetResource.SizeConstraintProperty;

         .. code-tab:: javascript

            // cloudformation.SizeConstraintSetResource.SizeConstraintProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.SizeConstraintSetResource.SizeConstraintProperty } from '@aws-cdk/aws-waf';





      .. py:attribute:: comparisonOperator

         ``SizeConstraintSetResource.SizeConstraintProperty.ComparisonOperator``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-waf-sizeconstraintset-sizeconstraint.html#cfn-waf-sizeconstraintset-sizeconstraint-comparisonoperator


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: fieldToMatch

         ``SizeConstraintSetResource.SizeConstraintProperty.FieldToMatch``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-waf-sizeconstraintset-sizeconstraint.html#cfn-waf-sizeconstraintset-sizeconstraint-fieldtomatch


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-waf.cloudformation.SizeConstraintSetResource.FieldToMatchProperty`


      .. py:attribute:: size

         ``SizeConstraintSetResource.SizeConstraintProperty.Size``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-waf-sizeconstraintset-sizeconstraint.html#cfn-waf-sizeconstraintset-sizeconstraint-size


         :type: number or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: textTransformation

         ``SizeConstraintSetResource.SizeConstraintProperty.TextTransformation``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-waf-sizeconstraintset-sizeconstraint.html#cfn-waf-sizeconstraintset-sizeconstraint-texttransformation


         :type: string or :py:class:`@aws-cdk/cdk.Token`



SizeConstraintSetResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: SizeConstraintSetResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.waf.cloudformation.SizeConstraintSetResourceProps;

      .. code-tab:: javascript

         // cloudformation.SizeConstraintSetResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.SizeConstraintSetResourceProps } from '@aws-cdk/aws-waf';





   .. py:attribute:: sizeConstraintSetName

      ``AWS::WAF::SizeConstraintSet.Name``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-waf-sizeconstraintset.html#cfn-waf-sizeconstraintset-name


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: sizeConstraints

      ``AWS::WAF::SizeConstraintSet.SizeConstraints``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-waf-sizeconstraintset.html#cfn-waf-sizeconstraintset-sizeconstraints


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-waf.cloudformation.SizeConstraintSetResource.SizeConstraintProperty`


SqlInjectionMatchSetResource
~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: SqlInjectionMatchSetResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.waf.cloudformation.SqlInjectionMatchSetResource;

      .. code-tab:: javascript

         const { cloudformation.SqlInjectionMatchSetResource } = require('@aws-cdk/aws-waf');

      .. code-tab:: typescript

         import { cloudformation.SqlInjectionMatchSetResource } from '@aws-cdk/aws-waf';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``SqlInjectionMatchSetResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``SqlInjectionMatchSetResource``
   :type properties: :py:class:`~@aws-cdk/aws-waf.cloudformation.SqlInjectionMatchSetResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*

   .. py:class:: FieldToMatchProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.waf.cloudformation.SqlInjectionMatchSetResource.FieldToMatchProperty;

         .. code-tab:: javascript

            // cloudformation.SqlInjectionMatchSetResource.FieldToMatchProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.SqlInjectionMatchSetResource.FieldToMatchProperty } from '@aws-cdk/aws-waf';





      .. py:attribute:: data

         ``SqlInjectionMatchSetResource.FieldToMatchProperty.Data``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-waf-bytematchset-bytematchtuples-fieldtomatch.html#cfn-waf-sizeconstraintset-sizeconstraint-fieldtomatch-data


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: type

         ``SqlInjectionMatchSetResource.FieldToMatchProperty.Type``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-waf-bytematchset-bytematchtuples-fieldtomatch.html#cfn-waf-sizeconstraintset-sizeconstraint-fieldtomatch-type


         :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: SqlInjectionMatchTupleProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.waf.cloudformation.SqlInjectionMatchSetResource.SqlInjectionMatchTupleProperty;

         .. code-tab:: javascript

            // cloudformation.SqlInjectionMatchSetResource.SqlInjectionMatchTupleProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.SqlInjectionMatchSetResource.SqlInjectionMatchTupleProperty } from '@aws-cdk/aws-waf';





      .. py:attribute:: fieldToMatch

         ``SqlInjectionMatchSetResource.SqlInjectionMatchTupleProperty.FieldToMatch``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-waf-sqlinjectionmatchset-sqlinjectionmatchtuples.html#cfn-waf-sqlinjectionmatchset-sqlinjectionmatchtuples-fieldtomatch


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-waf.cloudformation.SqlInjectionMatchSetResource.FieldToMatchProperty`


      .. py:attribute:: textTransformation

         ``SqlInjectionMatchSetResource.SqlInjectionMatchTupleProperty.TextTransformation``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-waf-sqlinjectionmatchset-sqlinjectionmatchtuples.html#cfn-waf-sqlinjectionmatchset-sqlinjectionmatchtuples-texttransformation


         :type: string or :py:class:`@aws-cdk/cdk.Token`



SqlInjectionMatchSetResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: SqlInjectionMatchSetResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.waf.cloudformation.SqlInjectionMatchSetResourceProps;

      .. code-tab:: javascript

         // cloudformation.SqlInjectionMatchSetResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.SqlInjectionMatchSetResourceProps } from '@aws-cdk/aws-waf';





   .. py:attribute:: sqlInjectionMatchSetName

      ``AWS::WAF::SqlInjectionMatchSet.Name``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-waf-sqlinjectionmatchset.html#cfn-waf-sqlinjectionmatchset-name


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: sqlInjectionMatchTuples

      ``AWS::WAF::SqlInjectionMatchSet.SqlInjectionMatchTuples``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-waf-sqlinjectionmatchset.html#cfn-waf-sqlinjectionmatchset-sqlinjectionmatchtuples


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-waf.cloudformation.SqlInjectionMatchSetResource.SqlInjectionMatchTupleProperty` or undefined


WebACLResource
~~~~~~~~~~~~~~

.. py:class:: WebACLResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.waf.cloudformation.WebACLResource;

      .. code-tab:: javascript

         const { cloudformation.WebACLResource } = require('@aws-cdk/aws-waf');

      .. code-tab:: typescript

         import { cloudformation.WebACLResource } from '@aws-cdk/aws-waf';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``WebACLResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``WebACLResource``
   :type properties: :py:class:`~@aws-cdk/aws-waf.cloudformation.WebACLResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*

   .. py:class:: ActivatedRuleProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.waf.cloudformation.WebACLResource.ActivatedRuleProperty;

         .. code-tab:: javascript

            // cloudformation.WebACLResource.ActivatedRuleProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.WebACLResource.ActivatedRuleProperty } from '@aws-cdk/aws-waf';





      .. py:attribute:: action

         ``WebACLResource.ActivatedRuleProperty.Action``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-waf-webacl-rules.html#cfn-waf-webacl-rules-action


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-waf.cloudformation.WebACLResource.WafActionProperty`


      .. py:attribute:: priority

         ``WebACLResource.ActivatedRuleProperty.Priority``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-waf-webacl-rules.html#cfn-waf-webacl-rules-priority


         :type: number or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: ruleId

         ``WebACLResource.ActivatedRuleProperty.RuleId``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-waf-webacl-rules.html#cfn-waf-webacl-rules-ruleid


         :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: WafActionProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.waf.cloudformation.WebACLResource.WafActionProperty;

         .. code-tab:: javascript

            // cloudformation.WebACLResource.WafActionProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.WebACLResource.WafActionProperty } from '@aws-cdk/aws-waf';





      .. py:attribute:: type

         ``WebACLResource.WafActionProperty.Type``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-waf-webacl-action.html#cfn-waf-webacl-action-type


         :type: string or :py:class:`@aws-cdk/cdk.Token`



WebACLResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: WebACLResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.waf.cloudformation.WebACLResourceProps;

      .. code-tab:: javascript

         // cloudformation.WebACLResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.WebACLResourceProps } from '@aws-cdk/aws-waf';





   .. py:attribute:: defaultAction

      ``AWS::WAF::WebACL.DefaultAction``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-waf-webacl.html#cfn-waf-webacl-defaultaction


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-waf.cloudformation.WebACLResource.WafActionProperty`


   .. py:attribute:: metricName

      ``AWS::WAF::WebACL.MetricName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-waf-webacl.html#cfn-waf-webacl-metricname


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: webAclName

      ``AWS::WAF::WebACL.Name``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-waf-webacl.html#cfn-waf-webacl-name


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: rules

      ``AWS::WAF::WebACL.Rules``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-waf-webacl.html#cfn-waf-webacl-rules


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-waf.cloudformation.WebACLResource.ActivatedRuleProperty` or undefined


XssMatchSetResource
~~~~~~~~~~~~~~~~~~~

.. py:class:: XssMatchSetResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.waf.cloudformation.XssMatchSetResource;

      .. code-tab:: javascript

         const { cloudformation.XssMatchSetResource } = require('@aws-cdk/aws-waf');

      .. code-tab:: typescript

         import { cloudformation.XssMatchSetResource } from '@aws-cdk/aws-waf';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``XssMatchSetResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``XssMatchSetResource``
   :type properties: :py:class:`~@aws-cdk/aws-waf.cloudformation.XssMatchSetResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*

   .. py:class:: FieldToMatchProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.waf.cloudformation.XssMatchSetResource.FieldToMatchProperty;

         .. code-tab:: javascript

            // cloudformation.XssMatchSetResource.FieldToMatchProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.XssMatchSetResource.FieldToMatchProperty } from '@aws-cdk/aws-waf';





      .. py:attribute:: data

         ``XssMatchSetResource.FieldToMatchProperty.Data``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-waf-xssmatchset-xssmatchtuple-fieldtomatch.html#cfn-waf-xssmatchset-xssmatchtuple-fieldtomatch-data


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: type

         ``XssMatchSetResource.FieldToMatchProperty.Type``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-waf-xssmatchset-xssmatchtuple-fieldtomatch.html#cfn-waf-xssmatchset-xssmatchtuple-fieldtomatch-type


         :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: XssMatchTupleProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.waf.cloudformation.XssMatchSetResource.XssMatchTupleProperty;

         .. code-tab:: javascript

            // cloudformation.XssMatchSetResource.XssMatchTupleProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.XssMatchSetResource.XssMatchTupleProperty } from '@aws-cdk/aws-waf';





      .. py:attribute:: fieldToMatch

         ``XssMatchSetResource.XssMatchTupleProperty.FieldToMatch``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-waf-xssmatchset-xssmatchtuple.html#cfn-waf-xssmatchset-xssmatchtuple-fieldtomatch


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-waf.cloudformation.XssMatchSetResource.FieldToMatchProperty`


      .. py:attribute:: textTransformation

         ``XssMatchSetResource.XssMatchTupleProperty.TextTransformation``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-waf-xssmatchset-xssmatchtuple.html#cfn-waf-xssmatchset-xssmatchtuple-texttransformation


         :type: string or :py:class:`@aws-cdk/cdk.Token`



XssMatchSetResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: XssMatchSetResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.waf.cloudformation.XssMatchSetResourceProps;

      .. code-tab:: javascript

         // cloudformation.XssMatchSetResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.XssMatchSetResourceProps } from '@aws-cdk/aws-waf';





   .. py:attribute:: xssMatchSetName

      ``AWS::WAF::XssMatchSet.Name``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-waf-xssmatchset.html#cfn-waf-xssmatchset-name


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: xssMatchTuples

      ``AWS::WAF::XssMatchSet.XssMatchTuples``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-waf-xssmatchset.html#cfn-waf-xssmatchset-xssmatchtuples


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-waf.cloudformation.XssMatchSetResource.XssMatchTupleProperty`



.. py:currentmodule:: @aws-cdk/aws-waf

